# zephyr-app-template

./: .gitignore  CMakeLists.txt  README.md  app.h.in  west.yml
.devcontainer/: .bashrc  Dockerfile  devcontainer.json
rust-lib/: .gitignore  Cargo.toml  build.rs
rust-lib/src/: lib.rs
src/: main.c
